[gd_scene load_steps=6 format=3 uid="uid://gbtngbruhdv6"]

[ext_resource type="Script" path="res://scenes/spawners/enemy_spawner.gd" id="1_hbgn1"]
[ext_resource type="PackedScene" uid="uid://dst0570sk5ran" path="res://scenes/enemies/mouse_pink.tscn" id="2_xuk2k"]
[ext_resource type="PackedScene" uid="uid://06sureqacfqy" path="res://scenes/enemies/mouse_grey.tscn" id="3_4ydys"]
[ext_resource type="PackedScene" uid="uid://bbj6uimixyy2k" path="res://scenes/enemies/worm.tscn" id="4_8wsvd"]
[ext_resource type="PackedScene" uid="uid://buqktns5wvyoq" path="res://scenes/enemies/worm_boss.tscn" id="5_5y1fa"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_hbgn1")
enemies = Array[PackedScene]([ExtResource("3_4ydys"), ExtResource("2_xuk2k"), ExtResource("4_8wsvd"), ExtResource("5_5y1fa")])

[node name="Normal" type="Timer" parent="."]
autostart = true

[node name="Pattern" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Elite" type="Timer" parent="."]
wait_time = 9.0
autostart = true

[connection signal="timeout" from="Normal" to="." method="_on_normal_timeout"]
[connection signal="timeout" from="Pattern" to="." method="_on_pattern_timeout"]
[connection signal="timeout" from="Elite" to="." method="_on_elite_timeout"]
